Update composer.json to allow using Symfony 7 dependencies

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=7.0",
-        "symfony/intl": "~2.6|~3.4|~4.0|~5.0|~6.0"
+        "symfony/intl": "~2.6|~3.4|~4.0|~5.0|~6.0|~7.0"
     },
     "suggest": {
         "ext-intl": "Needed for usage with other locales than 'en'"
